--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -53,8 +53,9 @@
                 android:id="@+id/searchText"
                 android:layout_weight="1" />
 
-            <com.chocoroll.ourcompay.Model.MTextView
+            <com.chocoroll.ourcompay.Model.EBTextView
                 android:clickable="true"
+                android:textColor="@color/textBold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="검색"
