--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="main_color">#AEE0F5</color>
+    <color name="main_color">#CBF0FF</color>
 
     <color name="slide_line">#ffadb3bf</color>
     <color name="slide_background">#ff57555c</color>
 
 
-    <color name="tab_background">#5085C0</color>
+    <color name="tab_background">#4277A6</color>
     <color name="tab_indicate">#1E4C6B</color>
 
-    <color name="textBold">#787878</color>
+    <color name="textBold">#686868</color>
     <color name="text">#8C8C8C</color>
 
 
