--- a/app/src/main/res/layout/activity_join_company.xml
+++ b/app/src/main/res/layout/activity_join_company.xml
@@ -5,6 +5,30 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF"
     android:orientation="vertical" >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:background="@color/main_color">
+
+        <FrameLayout
+            android:layout_gravity="center"
+            android:layout_marginLeft="12dp"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent">
+            <com.chocoroll.ourcompay.Model.EBTextView
+                android:id="@+id/title_bar_img"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:textSize="20dp"
+                android:textColor="#ffffff"
+                android:typeface="serif"
+                android:text=" > 회사 회원가입 "/>
+
+        </FrameLayout>
+
+    </LinearLayout>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -536,7 +560,8 @@
                     android:layout_height="30dp"
                     android:layout_marginRight="5dp"
                     android:text="JOIN"
-                    android:background="@null"
+                    android:gravity="center"
+                    android:background="@drawable/shape"
                     android:textColor="#0099CC"
                     android:textSize="13dp"
                     android:typeface="sans" />
@@ -549,7 +574,8 @@
                     android:layout_height="30dp"
                     android:layout_marginLeft="5dp"
                     android:text="CANCEL"
-                    android:background="@null"
+                    android:background="@drawable/shape"
+                    android:gravity="center"
                     android:textColor="#ff4444"
                     android:textSize="13dp"
                     android:typeface="sans" />
