--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,106 +1,201 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff"
-    >
-    <ImageView
-        android:layout_width="389dp"
-        android:layout_height="80dp"
-        android:id="@+id/title"
-        android:layout_gravity="center_horizontal"
-        android:layout_alignParentTop="true"/>
+    tools:context="com.example.adaasdasd.MainActivity"
+    android:background="#ffffff">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@color/main_color">
+
+        <LinearLayout
+            android:layout_gravity="center"
+            android:layout_marginLeft="12dp"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent">
+            <com.chocoroll.ourcompay.Model.MTextView
+                android:id="@+id/title_bar_img"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:textSize="18dp"
+                android:textColor="#ffffff"
+                android:typeface="sans"
+                android:text=" >  LOGIN"
+                android:textStyle="bold"/>
+
+
+        </LinearLayout>
+    </LinearLayout>
+
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_centerInParent="true">
+        android:layout_centerInParent="true"
+        android:orientation="vertical" >
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:orientation="horizontal" >
 
-            android:orientation="horizontal"
-            android:weightSum="1">
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical" >
 
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <com.chocoroll.ourcompay.Model.MTextView
+                        android:textColor="#6B6B6B"
+                        android:layout_width="wrap_content"
+                        android:layout_height="30dp"
+                        android:text = "I D  :  "
+                        android:typeface="sans"
+                        android:textSize="18dp"
+                        android:layout_gravity="center"/>
+                    <EditText
+                        android:textColor="#6B6B6B"
+                        android:id="@+id/editID"
+                        android:layout_width="150dp"
+                        android:layout_height="35dp"
+                        android:singleLine="true"
+                        android:typeface="sans"
+                        android:background="@null"/>
 
 
-                <EditText
-                    android:layout_width="200dp"
-                    android:layout_height="50dp"
-                    android:id="@+id/editID"
-                    android:layout_weight="2"
-                    android:hint="ID"
-                    android:singleLine="true"/>
-                <EditText
-                    android:layout_width="200dp"
-                    android:layout_height="50dp"
-                    android:id="@+id/editPwd"
-                    android:layout_weight="2"
-                    android:hint="Password"
-                    android:password="true"
-                    android:singleLine="true"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_marginLeft="43dp"
+                    android:layout_width="150dp"
+                    android:layout_height="1dp"
+                    android:background="@color/main_color"
+                    android:orientation="vertical" >
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_marginTop="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+
+                    <com.chocoroll.ourcompay.Model.MTextView
+                        android:textColor="#6B6B6B"
+                        android:layout_width="wrap_content"
+                        android:layout_height="30dp"
+                        android:text = "P W  :  "
+                        android:textSize="18dp"
+                        android:typeface="sans"
+                        android:layout_gravity="center"/>
+
+                    <EditText
+                        android:textColor="#6B6B6B"
+                        android:id="@+id/editPwd"
+                        android:layout_width="150dp"
+                        android:layout_height="35dp"
+                        android:inputType="textPassword"
+                        android:singleLine="true"
+                        android:typeface="sans"
+                        android:background="@null"/>
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_marginLeft="53dp"
+                    android:layout_width="150dp"
+                    android:layout_height="1dp"
+                    android:background="@color/main_color"
+                    android:orientation="vertical" >
+                </LinearLayout>
+
             </LinearLayout>
+
             <com.chocoroll.ourcompay.Model.MTextView
                 android:clickable="true"
                 android:id="@+id/login_bt"
-                android:layout_width="80dp"
+                android:layout_width="60dp"
                 android:layout_height="fill_parent"
                 android:layout_marginLeft="10dp"
-
-                android:text="로그인"
+                android:text="LOGIN"
+                android:gravity="center"
                 android:textSize="15dp"
                 android:textStyle="bold"
-                android:typeface="sans"
-                android:layout_weight="1.20" />
+                android:background="@null"
+                android:textColor="#AEE0F5"
+                android:typeface="sans" />
+        </LinearLayout>
+
+        <CheckBox
+            android:layout_marginTop="10dp"
+            android:id="@+id/auto_login"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:text=" 자동 로그인"
+            android:textSize="15dp"
+            android:layout_gravity="center"
+            android:textColor="#6B6B6B"
+            android:typeface="sans" />
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp" >
+
+
         </LinearLayout>
 
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
             android:orientation="horizontal"
-            android:weightSum="1">
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp" >
 
-            <CheckBox
-                android:layout_marginTop="10dp"
-                android:id="@+id/auto_login"
+            <com.chocoroll.ourcompay.Model.MTextView
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:text="비밀번호를 잊으셨나요?"
+                android:textColor="#6B6B6B"
+                android:textSize="14dp"
+                android:typeface="sans"
+                android:gravity="center"/>
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="자동 로그인"
-                android:textColor="#000000"
-                android:typeface="sans"
-                android:textSize="10dp" />
+                android:orientation="vertical">
+                <com.chocoroll.ourcompay.Model.MTextView
+                    android:id="@+id/login_findpasswd"
+                    android:layout_width="80dp"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="67dp"
+                    android:text="FIND PW"
+                    android:gravity="center"
+                    android:textStyle="bold"
+                    android:background="@null"
+                    android:textSize="14dp"
+                    android:textColor="#6B6B6B"
+                    android:typeface="sans" />
+                <LinearLayout
+                    android:layout_marginLeft="79dp"
+                    android:layout_width="60dp"
+                    android:layout_height="1dp"
+                    android:background="@color/main_color"
+                    android:orientation="vertical" >
+                </LinearLayout>
 
-            <com.chocoroll.ourcompay.Model.MTextView
-                android:clickable="true"
-                android:id="@+id/login_findid"
-                android:layout_width="80dp"
-                android:layout_height="30dp"
-                android:layout_alignParentRight="true"
-
-                android:text="아이디 찾기"
-                android:textSize="8dp"
-                android:typeface="sans"
-                android:layout_marginRight="10dp"/>
-            <com.chocoroll.ourcompay.Model.MTextView
-                android:clickable="true"
-                android:id="@+id/login_findpasswd"
-                android:layout_width="80dp"
-                android:layout_height="30dp"
-                android:layout_alignParentRight="true"
-
-                android:text="비밀번호 찾기"
-                android:textSize="8dp"
-                android:typeface="sans" />
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
+
 </RelativeLayout>
-
-
 
