--- a/app/src/main/res/layout/dialog_answer_list.xml
+++ b/app/src/main/res/layout/dialog_answer_list.xml
@@ -22,36 +22,39 @@
             android:background="#33a9a9a9"
             android:padding="10dip" />
 
-        <RelativeLayout
+        <LinearLayout
+            android:orientation="horizontal"
             android:id="@+id/seller_answer_box"
             android:layout_width="match_parent"
             android:layout_height="100dp" >
 
             <EditText
                 android:id="@+id/answer_content_this"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="fill_parent"
                 android:layout_alignParentLeft="true"
                 android:layout_toLeftOf="@+id/answer_ok"
                 android:background="#FFFFFF"
                 android:ems="10"
                 android:hint="답변을 입력하세요..."
+                android:layout_weight="8"
                 android:inputType="textMultiLine"
                 android:typeface="sans" />
 
             <com.chocoroll.ourcompay.Model.MTextView
                 android:clickable="true"
                 android:id="@+id/answer_ok"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="2"
                 android:layout_height="fill_parent"
                 android:layout_alignParentRight="true"
                 android:gravity="center"
                 android:text="작성"
                 android:background="@null"
-                android:textColor="#0099CC"
+                android:textColor="#87B3D9"
                 android:textSize="13dp"
                 android:typeface="sans" />
-        </RelativeLayout>
+        </LinearLayout>
 
 
 
