--- a/app/src/main/res/layout/fragment_company_detail.xml
+++ b/app/src/main/res/layout/fragment_company_detail.xml
@@ -10,14 +10,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TableRow>
+        <TableRow
+            android:layout_marginBottom="10dp">
 
-            <com.chocoroll.ourcompay.Model.MTextView
+            <com.chocoroll.ourcompay.Model.BTextView
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="주소"
-                android:textColor="#000000"/>
+                android:text="주소 :"
+                android:textColor="#6C6C6C"/>
 
             <com.chocoroll.ourcompay.Model.MTextView
                 android:layout_weight="3"
@@ -25,42 +26,44 @@
                 android:layout_height="wrap_content"
                 android:text="주소값"
                 android:id="@+id/comAddress"
-                android:textColor="#000000"/>
+                android:textColor="#6C6C6C"/>
 
 
         </TableRow>
 
         <TableRow
+            android:layout_marginBottom="10dp"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">
 
-            <com.chocoroll.ourcompay.Model.MTextView
+            <com.chocoroll.ourcompay.Model.BTextView
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="연락처"
-                android:textColor="#000000"/>
+                android:text="연락처 :"
+                android:textColor="#6C6C6C"/>
 
             <com.chocoroll.ourcompay.Model.MTextView
                 android:layout_weight="3"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="연락처값값"
+                android:text="연락처값"
                 android:autoLink="phone"
                 android:id="@+id/comPhone"
-                android:textColor="#000000"/>
+                android:textColor="#6C6C6C"/>
         </TableRow>
 
         <TableRow
+            android:layout_marginBottom="10dp"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">
 
-            <com.chocoroll.ourcompay.Model.MTextView
+            <com.chocoroll.ourcompay.Model.BTextView
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="이메일"
-                android:textColor="#000000"/>
+                android:text="이메일 :"
+                android:textColor="#6C6C6C"/>
 
             <com.chocoroll.ourcompay.Model.MTextView
                 android:layout_weight="3"
@@ -69,20 +72,21 @@
                 android:text="연락처값값"
                 android:autoLink="email"
                 android:id="@+id/comEmail"
-                android:textColor="#000000"/>
+                android:textColor="#6C6C6C"/>
         </TableRow>
 
 
         <TableRow
+            android:layout_marginBottom="10dp"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">
 
-            <com.chocoroll.ourcompay.Model.MTextView
+            <com.chocoroll.ourcompay.Model.BTextView
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="웹사이트"
-                android:textColor="#000000"/>
+                android:text="웹 사이트 :"
+                android:textColor="#6C6C6C"/>
 
             <com.chocoroll.ourcompay.Model.MTextView
                 android:layout_weight="3"
@@ -91,29 +95,31 @@
                 android:text="웹사이특"
                 android:autoLink="web"
                 android:id="@+id/comSite"
-                android:textColor="#000000"/>
+                android:textColor="#6c6C6C"/>
         </TableRow>
 
 
 
         <TableRow
+            android:layout_marginBottom="10dp"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">
 
-            <com.chocoroll.ourcompay.Model.MTextView
+            <com.chocoroll.ourcompay.Model.BTextView
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="소개"
-                android:textColor="#000000"/>
+                android:text="소개 :"
+                android:textColor="#6C6C6C"/>
 
             <com.chocoroll.ourcompay.Model.MTextView
                 android:layout_weight="3"
                 android:layout_width="0dp"
+                android:lineSpacingExtra="3dp"
                 android:layout_height="wrap_content"
-                android:text="회사소개"
+                android:text="회사소개000000000000000000mmmmmmmmmㅡㅡㅡㅡㅡㅡㅡㅡ"
                 android:id="@+id/comIntro"
-                android:textColor="#000000"/>
+                android:textColor="#6C6c6C"/>
         </TableRow>
 
     </TableLayout>
