--- a/app/src/main/res/layout/fragment_join_select.xml
+++ b/app/src/main/res/layout/fragment_join_select.xml
@@ -1,4 +1,3 @@
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,33 +6,33 @@
     android:orientation="vertical"
     >
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="1dp"
-        android:background="#336c97cf"
-        android:orientation="vertical" >
-    </LinearLayout>
 
-
-
-    <ImageButton xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="180dp"
-        android:layout_marginLeft="70dp"
+    <com.chocoroll.ourcompay.Model.EBTextView
+        android:gravity="center"
         android:id="@+id/btnJoinUser"
-        android:background="@null"
-        android:src="@drawable/user_join" />
-
-    <ImageButton xmlns:android="http://schemas.android.com/apk/res/android"
-
+        android:clickable="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:layout_marginLeft="72dp"
-        android:background="@null"
+        android:textSize="25dp"
+        android:textColor="#FFF"
+        android:padding="10dp"
+        android:layout_marginTop="190dp"
+        android:background="#87B3D9"
+        android:text="JOIN AS USER"
+        android:layout_gravity="center_horizontal" />
+
+    <com.chocoroll.ourcompay.Model.EBTextView
+        android:layout_gravity="center"
+        android:layout_marginTop="30dp"
         android:id="@+id/btnJoinCompany"
-        android:src="@drawable/company_join" />
+        android:clickable="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="25dp"
+        android:textColor="#FFF"
+        android:padding="10dp"
+        android:background="#87B3D9"
+        android:text="JOIN AS COMPANY" />
 
 
 </LinearLayout>
