--- a/app/src/main/res/layout/fragment_qna.xml
+++ b/app/src/main/res/layout/fragment_qna.xml
@@ -8,28 +8,31 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="90dp"
         android:layout_gravity="center_horizontal"
         android:padding="10dp">
 
         <EditText
-            android:layout_weight="3"
+            android:layout_weight="5"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:id="@+id/edit_qna"
             android:layout_gravity="center_horizontal" />
 
-        <com.chocoroll.ourcompay.Model.MTextView
+        <com.chocoroll.ourcompay.Model.EBTextView
+            android:gravity="center"
             android:clickable="true"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:text="작성"
+            android:textColor="@color/textBold"
             android:id="@+id/btn_qna"
             android:layout_gravity="center_horizontal" />
     </LinearLayout>
 
     <ListView
+        android:divider="@color/main_color"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/listViewQna" />
