--- a/app/src/main/res/layout/model_answer.xml
+++ b/app/src/main/res/layout/model_answer.xml
@@ -10,9 +10,10 @@
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="내용"
-        android:textSize="15dp"
-        android:textColor="#000000"
+        android:text="네네네네네네"
+        android:lineSpacingExtra="3dp"
+        android:textSize="12dp"
+        android:textColor="@color/text"
         android:id="@+id/answer_content" />
 
     <RelativeLayout
@@ -22,23 +23,23 @@
         android:padding="5dp">
 
 
-        <com.chocoroll.ourcompay.Model.MTextView
+        <com.chocoroll.ourcompay.Model.BTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="날짜"
             android:id="@+id/answer_date"
-            android:textColor="#000000"
+            android:textColor="@color/text"
             android:textSize="10dp"
             android:layout_gravity="center_horizontal"
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
 
-        <com.chocoroll.ourcompay.Model.MTextView
+        <com.chocoroll.ourcompay.Model.BTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="작성자"
-            android:textColor="#000000"
+            android:textColor="@color/text"
             android:textSize="10dp"
             android:id="@+id/answer_writer"
             android:layout_alignParentTop="true"
