--- a/app/src/main/res/layout/model_bookmark.xml
+++ b/app/src/main/res/layout/model_bookmark.xml
@@ -14,7 +14,7 @@
         android:layout_alignParentStart="true" />
 
 
-    <com.chocoroll.ourcompay.Model.MTextView
+    <com.chocoroll.ourcompay.Model.EBTextView
         android:clickable="true"
         android:focusable="false"
         android:layout_width="wrap_content"
