--- a/app/src/main/res/layout/slide_menu_logoutuser.xml
+++ b/app/src/main/res/layout/slide_menu_logoutuser.xml
@@ -26,7 +26,7 @@
                             android:src="@drawable/left_menu" />
 
 
-                        <com.chocoroll.ourcompay.Model.MTextView
+                        <com.chocoroll.ourcompay.Model.BTextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
@@ -57,7 +57,7 @@
                             android:src="@drawable/left_menu" />
 
 
-                        <com.chocoroll.ourcompay.Model.MTextView
+                        <com.chocoroll.ourcompay.Model.BTextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
