--- a/app/src/main/res/layout/model_report.xml
+++ b/app/src/main/res/layout/model_report.xml
@@ -5,18 +5,23 @@
     android:background="#ffffff"
     android:padding="10dp">
 
-    <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:id="@+id/logo" />
+    <com.chocoroll.ourcompay.Model.MTextView
+        android:layout_marginLeft="5dp"
+        android:textColor="@color/textBold"
+        android:textSize="17dp"
+        android:layout_width="280dp"
+        android:layout_height="wrap_content"
+        android:text="[넥슨] 취업 정보 알고 싶어요."
+        android:id="@+id/reportTitle" />
 
     <com.chocoroll.ourcompay.Model.MTextView
         android:layout_marginLeft="10dp"
-        android:textColor="#000000"
-        android:textSize="20dp"
-        android:layout_width="wrap_content"
+        android:textColor="@color/textBold"
+        android:textSize="15dp"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"
-        android:text="[회사이름]"
-        android:id="@+id/reportTitle" />
+        android:text="2015/06/04"
+        android:id="@+id/reportdate" />
+
 
 </LinearLayout>
